// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages login should render correctly 1`] = `
<Component
  description="Login page of the Fares data build tool"
  errors={Array []}
  title="Login - Fares data build tool"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-two-thirds"
    >
      <CsrfForm
        action="/api/login"
        csrfToken=""
        method="post"
      >
        <ErrorSummary
          errors={Array []}
        />
        <div
          className="govuk-form-group "
        >
          <div
            aria-describedby="register-page-heading"
            className="govuk-fieldset"
          >
            <legend
              className="govuk-fieldset__legend govuk-fieldset__legend--l"
            >
              <h1
                className="govuk-fieldset__heading"
                id="register-page-heading"
              >
                Sign in
              </h1>
            </legend>
            <p
              className="govuk-hint hint-text"
            >
              Enter Fares Data Build Tool account details to sign in
            </p>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="email"
              >
                Email
              </label>
              <FormElementWrapper
                errorClass="govuk-input--error"
                errorId="email"
                errors={Array []}
              >
                <input
                  aria-describedby="email-hint"
                  autoComplete="email"
                  className="govuk-input"
                  defaultValue=""
                  id="email"
                  name="email"
                  spellCheck="false"
                  type="text"
                />
              </FormElementWrapper>
            </div>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="password"
              >
                Password
              </label>
              <FormElementWrapper
                errorClass="govuk-input--error"
                errorId="password"
                errors={Array []}
              >
                <input
                  aria-describedby="password-hint"
                  autoComplete="off"
                  className="govuk-input"
                  id="password"
                  name="password"
                  spellCheck="false"
                  type="password"
                />
              </FormElementWrapper>
            </div>
          </div>
        </div>
        <input
          className="govuk-button"
          id="sign-in-button"
          name="signIn"
          type="submit"
          value="Sign in"
        />
      </CsrfForm>
    </div>
    <div
      className="govuk-grid-column-one-third"
    >
      <div>
        <h1
          className="govuk-heading-s"
        >
          Forgot your Password?
        </h1>
        <a
          className="govuk-link"
          href="/forgotPassword"
        >
          Reset your password
        </a>
      </div>
      <br />
      <div>
        <h1
          className="govuk-heading-s"
        >
          Don't have an account?
        </h1>
        <a
          className="govuk-link"
          href="/requestAccess"
        >
          Request access
        </a>
      </div>
    </div>
  </div>
</Component>
`;

exports[`pages login should render error messaging when errors are passed 1`] = `
<Component
  description="Login page of the Fares data build tool"
  errors={
    Array [
      Object {
        "errorMessage": "Enter an email address in the correct format, like name@example.com",
        "id": "email",
      },
    ]
  }
  title="Login - Fares data build tool"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-two-thirds"
    >
      <CsrfForm
        action="/api/login"
        csrfToken=""
        method="post"
      >
        <ErrorSummary
          errors={
            Array [
              Object {
                "errorMessage": "Enter an email address in the correct format, like name@example.com",
                "id": "email",
              },
            ]
          }
        />
        <div
          className="govuk-form-group govuk-form-group--error"
        >
          <div
            aria-describedby="register-page-heading"
            className="govuk-fieldset"
          >
            <legend
              className="govuk-fieldset__legend govuk-fieldset__legend--l"
            >
              <h1
                className="govuk-fieldset__heading"
                id="register-page-heading"
              >
                Sign in
              </h1>
            </legend>
            <p
              className="govuk-hint hint-text"
            >
              Enter Fares Data Build Tool account details to sign in
            </p>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="email"
              >
                Email
              </label>
              <FormElementWrapper
                errorClass="govuk-input--error"
                errorId="email"
                errors={
                  Array [
                    Object {
                      "errorMessage": "Enter an email address in the correct format, like name@example.com",
                      "id": "email",
                    },
                  ]
                }
              >
                <input
                  aria-describedby="email-hint"
                  autoComplete="email"
                  className="govuk-input"
                  defaultValue="test@example.com"
                  id="email"
                  name="email"
                  spellCheck="false"
                  type="text"
                />
              </FormElementWrapper>
            </div>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="password"
              >
                Password
              </label>
              <FormElementWrapper
                errorClass="govuk-input--error"
                errorId="password"
                errors={
                  Array [
                    Object {
                      "errorMessage": "Enter an email address in the correct format, like name@example.com",
                      "id": "email",
                    },
                  ]
                }
              >
                <input
                  aria-describedby="password-hint"
                  autoComplete="off"
                  className="govuk-input"
                  id="password"
                  name="password"
                  spellCheck="false"
                  type="password"
                />
              </FormElementWrapper>
            </div>
          </div>
        </div>
        <input
          className="govuk-button"
          id="sign-in-button"
          name="signIn"
          type="submit"
          value="Sign in"
        />
      </CsrfForm>
    </div>
    <div
      className="govuk-grid-column-one-third"
    >
      <div>
        <h1
          className="govuk-heading-s"
        >
          Forgot your Password?
        </h1>
        <a
          className="govuk-link"
          href="/forgotPassword"
        >
          Reset your password
        </a>
      </div>
      <br />
      <div>
        <h1
          className="govuk-heading-s"
        >
          Don't have an account?
        </h1>
        <a
          className="govuk-link"
          href="/requestAccess"
        >
          Request access
        </a>
      </div>
    </div>
  </div>
</Component>
`;
